# incendio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md
package/: CMakeLists.txt
package/debian/: incendio.desktop
src/: CMakeLists.txt  appConfig.hpp.in  core.cpp  core.hpp  main.cpp  qml.qrc
src/quicks/: calculator.cpp  calculator.hpp
src/utils/: utils.cpp  utils.hpp
src/widgets/: Calculator.qml  MainWindow.qml  MainWindowMenuBar.qml  mainWindow.qml
